--- a/vignettes/library.bib
+++ b/vignettes/library.bib
@@ -1,4 +1,4 @@
-@article{VanNostrand2016,
+    @article{VanNostrand2016,
 abstract = {As RNA-binding proteins (RBPs) play essential roles in cellular physiology by interacting with target RNA molecules, binding site identification by UV crosslinking and immunoprecipitation (CLIP) of ribonucleoprotein complexes is critical to understanding RBP function. However, current CLIP protocols are technically demanding and yield low-complexity libraries with high experimental failure rates. We have developed an enhanced CLIP (eCLIP) protocol that decreases requisite amplification by ∼1,000-fold, decreasing discarded PCR duplicate reads by ∼60{\%} while maintaining single-nucleotide binding resolution. By simplifying the generation of paired IgG and size-matched input controls, eCLIP improves specificity in the discovery of authentic binding sites. We generated 102 eCLIP experiments for 73 diverse RBPs in HepG2 and K562 cells (available at https://www.encodeproject.org), demonstrating that eCLIP enables large-scale and robust profiling, with amplification and sample requirements similar to those of ChIP-seq. eCLIP enables integrative analysis of diverse RBPs to reveal factor-specific profiles, common artifacts for CLIP and RNA-centric perspectives on RBP activity.},
 author = {{Van Nostrand}, Eric L and Pratt, Gabriel A and Shishkin, Alexander A and Gelboin-Burkhart, Chelsea and Fang, Mark Y and Sundararaman, Balaji and Blue, Steven M and Nguyen, Thai B and Surka, Christine and Elkins, Keri and Stanton, Rebecca and Rigo, Frank and Guttman, Mitchell and Yeo, Gene W},
 doi = {10.1038/nmeth.3810},
@@ -62,7 +62,20 @@ pages = {129--141},
 title = {{Transcriptome-wide Identification of RNA-Binding Protein and MicroRNA Target Sites by PAR-CLIP}},
 volume = {141},
 year = {2010}
+},
+@article{Haberman2017,
+abstract = {BACKGROUND Ultraviolet (UV) crosslinking and immunoprecipitation (CLIP) identifies the sites on RNAs that are in direct contact with RNA-binding proteins (RBPs). Several variants of CLIP exist, which require different computational approaches for analysis. This variety of approaches can create challenges for a novice user and can hamper insights from multi-study comparisons. Here, we produce data with multiple variants of CLIP and evaluate the data with various computational methods to better understand their suitability. RESULTS We perform experiments for PTBP1 and eIF4A3 using individual-nucleotide resolution CLIP (iCLIP), employing either UV-C or photoactivatable 4-thiouridine (4SU) combined with UV-A crosslinking and compare the results with published data. As previously noted, the positions of complementary DNA (cDNA)-starts depend on cDNA length in several iCLIP experiments and we now find that this is caused by constrained cDNA-ends, which can result from the sequence and structure constraints of RNA fragmentation. These constraints are overcome when fragmentation by RNase I is efficient and when a broad cDNA size range is obtained. Our study also shows that if RNase does not efficiently cut within the binding sites, the original CLIP method is less capable of identifying the longer binding sites of RBPs. In contrast, we show that a broad size range of cDNAs in iCLIP allows the cDNA-starts to efficiently delineate the complete RNA-binding sites. CONCLUSIONS We demonstrate the advantage of iCLIP and related methods that can amplify cDNAs that truncate at crosslink sites and we show that computational analyses based on cDNAs-starts are appropriate for such methods.},
+author = {Haberman, Nejc and Huppertz, Ina and Attig, Jan and K{\"{o}}nig, Julian and Wang, Zhen and Hauer, Christian and Hentze, Matthias W. and Kulozik, Andreas E. and {Le Hir}, Herv{\'{e}} and Curk, Toma{\v{z}} and Sibley, Christopher R. and Zarnack, Kathi and Ule, Jernej},
+doi = {10.1186/s13059-016-1130-x},
+issn = {1474760X},
+journal = {Genome Biology},
+keywords = {Binding site assignment,ECLIP,Eukaryotic initiation factor 4A-III (eIF4A3),Exon-junction complex,High-throughput sequencing,ICLIP,IrCLIP,Polypyrimidine tract binding protein 1 (PTBP1),Protein-RNA interactions},
+number = {1},
+title = {{Insights into the design and interpretation of iCLIP experiments}},
+volume = {18},
+year = {2017}
 }
+
 
 
 
